Fixed layout issue caused by custom user stylesheets

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -8,6 +8,8 @@ html {
 }
 
 body {
+    font-family: arial,helvetica,verdana,sans-serif;
+	font-size: 100%;
 	height: 130px;
 	margin: 0;
 	overflow: hidden;
